cmake_minimum_required(VERSION 3.26)
project(integrsystems)

set(CMAKE_CXX_STANDARD 14)

add_executable(integrsystems
        "1/2 семинар/1_1.c"
        "1/2 семинар/HW1.cpp"
        "1 | 2 семинар/1_1.c"
        "1 | 2 семинар/1_2.c"
        "1 | 2 семинар/1_3.c"
        "1 | 2 семинар/1_4.c"
        "1 | 2 семинар/1_5.c"
        "1 | 2 семинар/firstpara.cpp"
        "Домашние задания/HW1.cpp")
